# soup

./: LICENSE.txt  Pipfile  README.md  setup.cfg  setup.py
docs/: conf.py  index.rst  modules.rst  soup.rst
docs/_static/: class_diagram.uml
examples/mesa/: main.py  processing.py  utils.py
examples/plug&play/: main.py
examples/plug&play/input/: clinical.csv  features.csv
soup/: AC.py  HRFreq.py  HRTime.py  Statistics.py  __init__.py  config.py  display.py  soup.py
