[metadata]
name = soup
version = attr: soup.__version__
url = https://bitbucket.org/shei_fw/phd_validation_tool/
author = Eesy-Innovation GmbH
author_email = marta.verona-almeida@eesy-innovation.com
license = LICENSE.txt
description = Sleep data cOpilot for accUrate hyPnogram labeling

[options]
python_requires = >= 3.8
# Dependencies are in setup.py for GitHub's dependency graph.
